Desafio WebDesing criação de tabela

--- a/aula07-tabelasemantica/index.html
+++ b/aula07-tabelasemantica/index.html
@@ -10,8 +10,11 @@
     <h1> Tabela </h1>
 
     <table id="tabela1">
+        <tr>
+            <td colspan="4" class="cabecalhoERodape"> Verdureira do Gui</td>
+     </tr>
 <tr>
-        <td colspan="4" class="cabecalhoERodape"> Tudo fresquinho para você</td>
+        <td colspan="4" class="cabecalhoERodape"> 🍉 Tudo fresquinho para você 🍇</td>
  </tr>
  
 
