--- a/aula07-tabelasemantica/index.html
+++ b/aula07-tabelasemantica/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela com tags semântica</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
 </head>
 <body>
     <h1> Tabela </h1>
