Web Design desafio criar tabela semantica

--- a/aula07-tabelasemantica/index.html
+++ b/aula07-tabelasemantica/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1> Tabela </h1>
+    <h2> Tags 
+        <span class="sublinhado">semânticas</span>
+        HTML para tabelas
+    </h2>
 
     <table id="tabela1">
         <tr>
