--- a/dino/index.html
+++ b/dino/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <h1>Jogo do Dinossauro</h1>
+    <main class="background">
+        <div class="dino"></div>
+    </main>
 </body>
 </html>
